<resources>
    <string name="app_name">MAD3ZooV2</string>
    <string name="num">Количество животных:</string>
    <string name="edit">Изменить</string>
    <string name="del">Удалить</string>
    <string name="back">Назад</string>
    <string name="name">Кличка:</string>
    <string name="aviary">Вольер:</string>
    <string name="zoo">Зоопарк:</string>
    <string name="age">Возраст (лет):</string>
    <string name="height">Высота (см):</string>
    <string name="weight">Масса (кг):</string>
    <string name="tailLength">Длина хвоста (см):</string>
    <string name="sex">Пол:</string>
    <string name="description">Описание:</string>
    <string name="editTextNameHint">Введите кличку</string>
    <string name="editTextAviaryHint">Введите вольер</string>
    <string name="editTextZooHint">Введите зоопарк</string>
    <string name="editTextAgeHint">Введите возаст (лет)</string>
    <string name="editTextHeightHint">Введите высоту (см)</string>
    <string name="editTextWeightHint">Введсте массу (кг)</string>
    <string name="editTextTailLength">Введите длину хвоста (см)</string>
    <string name="editTextDescriptionHint">Введите описание</string>
    <string name="sexM">Самец</string>
    <string name="sexW">Самка</string>
    <string name="confirmChangesButton">Подтвердить</string>
    <string name="plus">➕</string>
    <string name="delAviary">Удалить вольер</string>
    <string name="delZoo">Удалить зоопарк</string>
    <string name="itemName">Название:</string>
</resources>